# NGram

./: CMakeLists.txt  Testo 1000KB.txt  Testo 100KB.txt  Testo 50KB.txt  main.cpp  parallel_NGram.cpp  parallel_main.h  sequential_NGram.cpp  sequential_NGram.h
